# libsig

./: .clang-format  .dir-locals.el  .editorconfig  .gitignore  CMakeLists.txt  README.md
app/: bench.c  bench.h  file_io.c  file_io.h  main.c  main.h
data/input/: filter_coeffs.csv  normalized_freqs.csv  signal_small.csv
data/output/: conv_result.csv  feedback_result_d.csv  feedback_result_n.csv  filter_result.csv  freqz_result.csv  impz_result.csv  parallel_result.csv  parallel_result_d.csv  parallel_result_n.csv  series_result.csv  series_result_n.csv
include/: libsig.h
matlab/: gen_filter_coeffs.m  gen_test_data.m  plot_benchmarks.m  run_benchmarks.m
src/: libsig.c
